--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [tool.poetry]
 name = "pytest-kube"
-version = "0.1.1"
-description = ""
-authors = ["Your Name <you@example.com>"]
+version = "0.1.2"
+description = "Pytest plugin to run tests on Kubernetes"
+authors = ["Tobias Bradtke <webwurst@gmail.com>"]
 
 [tool.poetry.plugins.pytest11]
 pytest-kind = "pytest_kube.plugin"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pytest = "^5.4.2"
+pytest = "^5.4.3"
 pytest-kind = "20.5.2"
-
-[tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry>=0.12"]
